# TraceHelix

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TraceHelix.slnx  compose.yaml  global.json
.config/: dotnet-tools.json
.github/: CODEOWNERS  pull_request_template.md
deploy/: nginx.conf
docs/: architecture.md  event-schema.md  redaction-policy.md  release-policy.md  release-readiness-v0.1.0.md  training-candidate-export.md  training-data-contract.md  verification.md
schemas/: analysis-report.schema.json  dataset-manifest.schema.json  teacher-label.schema.json  trace-event.schema.json  training-candidate.schema.json  training-example.schema.json
scripts/: adversarial_release_mutations.py  build_release_bundle.py  release_assets.py  source_fingerprint.py  test_build_release_bundle.py  test_release_assets.py  test_repository_guards.py  test_verify_release_bundle.py  verify-api.sh  verify-browser.sh  verify-compose-lifecycle.sh  verify-e2e.sh  verify-release-bundle.sh  verify_container_pins.py  verify_release_bundle.py  workflow_contract.py
training/: pyproject.toml
training/configs/: redaction-v1.yaml
training/src/tracehelix_training/: __init__.py  _canonical.py  contracts.py  extract.py  io.py  redact.py
training/tests/: test_contracts.py  test_extract.py  test_io.py  test_redact.py  test_smoke.py  test_traceback_privacy.py  traceback_privacy.py
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+75 files in other folders)
