[project]
name = "tracehelix-training"
version = "0.1.0"
description = "Offline TraceHelix training package shell"
requires-python = ">=3.11"
dependencies = []
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/tracehelix_training"]
[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.14"]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
