[project]
name = "tracehelix-training"
version = "0.1.0"
description = "Offline TraceHelix training package shell"
requires-python = ">=3.11"
dependencies = ["jsonschema==4.26.0", "pydantic==2.12.5"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/tracehelix_training"]
[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.1.1",
    "rfc3339-validator==0.1.4",
    "ruff==0.15.4",
    "types-jsonschema==4.26.0.20260202",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
